# privacy_agent

./: .dockerignore  .gitignore  .gitmodules  ABB_INTEGRATION_LOG_2026-03-05.md  ABCD_EXECUTION_CHECKLIST.md  AGENTDOJO_FIVE_BASELINE_RESULTS_2026-03-14.md  AGENTLEAK_CHANNEL_FIVE_BASELINE_PROGRESS_2026-03-14.md  AGENTLEAK_PARITY_FIVE_BASELINE_RESULTS_2026-03-15.md  AGENTLEAK_UNIFIED_FIVE_BASELINE_RESULTS_2026-03-15.md  AGENT_PROTOCOL_RISK_COMPARISON.md  ALGORITHMS.md  ALGORITHMS_CN.md  ANALYSIS.md  ARTIFACT.md  BASELINES_FAIRNESS.md  BENCHMARK_MOTIVATION_PROGRESS.md  CROSS_BENCHMARK_EVAL_STATUS_2026-03-14.md  Dockerfile  EFFECTIVENESS.md  EXPERIMENT_DESIGN.md  EXPERIMENT_RESULTS_SNAPSHOT_2026-03-02.md  EXPERIMENT_RESULTS_SNAPSHOT_2026-03-04.md  EXPERIMENT_RESULTS_SNAPSHOT_2026-03-06.md  EXTERNAL_EVAL_EXECUTION_PLAN_2026-02-24.md  FORMAL_SECURITY.md  LATEST_CITABLE_RESULTS.md  LEAKAGE_EVIDENCE.md  LEAKAGE_MODEL.md  MEMORY.md  MOTIVATION_PAPER.md  MOTIVATION_PAPER_CN.md  MULTI_TRACK_EVAL_REPORT.md  Makefile  NANOCLAW_VERSION.txt  PERFORMANCE.md  POLISH_CLOSURE.md  README.md  SAP_动机.md  SECURECLAW_SEMANTICS.md  appendix_leakage.tex  (+26 more)
agent/: mcp_client.py  nanoclaw_agent.py
capsule/: MC_CONTRACT_SPEC.md  __init__.py  capsule.sb  mcp_proxy.py  run_smoke.sh  run_smoke_linux.sh  smoke.py  verify_contract.py
common/: __init__.py  canonical.py  delegation_token.py  federated_proof_token.py  install_tokens.py  sanitize.py  uds_http.py  workload_token.py
executor_server/: __init__.py  server.py
fss/: dpf.py  (+1 more)
policy_server_rust/: Cargo.toml
policy_server_rust/src/: main.rs
(+176 files in other folders)
